--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4578808_jg236g4fafi.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>旺旺商城</title>
   </head>
   <body>
     <div id="app"></div>
